src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-11.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"\\u{feff}\\t \\t# comment\")"
---
- token: byte_order_mark
  stream: ﻿
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- token: separator
  stream: "\t \t"
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 6
      line: 0
      column: 6
- token: comment
  stream: "# comment"
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 15
      line: 0
      column: 15
- value:
    version: ~
    tags: {}

