src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-12.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"\\u{feff}\\t \\t# comment\\r\")"
---
- token: byte_order_mark
  stream: ﻿
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- token: separator
  stream: "\t \t"
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 6
      line: 0
      column: 6
- token: comment
  stream: "# comment"
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 15
      line: 0
      column: 15
- token: break
  stream: "\r"
  span:
    start:
      index: 15
      line: 0
      column: 15
    end:
      index: 16
      line: 1
      column: 0
- value:
    version: ~
    tags: {}

