src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-13.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"%YAML 1.2\\n%TAG !yaml! tag:yaml.org,2002:\\r\\n%FOO bar baz\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: YAML
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 5
      line: 0
      column: 5
- token: separator
  stream: " "
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: yaml_version
  stream: "1.2"
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 9
      line: 0
      column: 9
- token: break
  stream: "\n"
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 10
      line: 1
      column: 0
- token: directive
  stream: "%"
  span:
    start:
      index: 10
      line: 1
      column: 0
    end:
      index: 11
      line: 1
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 11
      line: 1
      column: 1
    end:
      index: 14
      line: 1
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 14
      line: 1
      column: 4
    end:
      index: 15
      line: 1
      column: 5
- token: tag_handle
  stream: "!yaml!"
  span:
    start:
      index: 15
      line: 1
      column: 5
    end:
      index: 21
      line: 1
      column: 11
- token: separator
  stream: " "
  span:
    start:
      index: 21
      line: 1
      column: 11
    end:
      index: 22
      line: 1
      column: 12
- token: tag_prefix
  stream: "tag:yaml.org,2002:"
  span:
    start:
      index: 22
      line: 1
      column: 12
    end:
      index: 40
      line: 1
      column: 30
- token: break
  stream: "\r\n"
  span:
    start:
      index: 40
      line: 1
      column: 30
    end:
      index: 42
      line: 2
      column: 0
- token: directive
  stream: "%"
  span:
    start:
      index: 42
      line: 2
      column: 0
    end:
      index: 43
      line: 2
      column: 1
- token: directive_name
  stream: FOO
  span:
    start:
      index: 43
      line: 2
      column: 1
    end:
      index: 46
      line: 2
      column: 4
- severity: warning
  message: "unknown directive 'FOO'"
  span:
    start:
      index: 43
      line: 2
      column: 1
    end:
      index: 46
      line: 2
      column: 4
  stream: FOO
- token: separator
  stream: " "
  span:
    start:
      index: 46
      line: 2
      column: 4
    end:
      index: 47
      line: 2
      column: 5
- token: directive_parameter
  stream: bar
  span:
    start:
      index: 47
      line: 2
      column: 5
    end:
      index: 50
      line: 2
      column: 8
- token: separator
  stream: " "
  span:
    start:
      index: 50
      line: 2
      column: 8
    end:
      index: 51
      line: 2
      column: 9
- token: directive_parameter
  stream: baz
  span:
    start:
      index: 51
      line: 2
      column: 9
    end:
      index: 54
      line: 2
      column: 12
- value:
    version: "1.2"
    tags:
      "!yaml!": "tag:yaml.org,2002:"

