src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-15.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"\\u{feff}%YAML 1.2\\n---\")"
---
- token: byte_order_mark
  stream: ﻿
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- token: directive
  stream: "%"
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 4
      line: 0
      column: 4
- token: directive_name
  stream: YAML
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 8
      line: 0
      column: 8
- token: separator
  stream: " "
  span:
    start:
      index: 8
      line: 0
      column: 8
    end:
      index: 9
      line: 0
      column: 9
- token: yaml_version
  stream: "1.2"
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 12
      line: 0
      column: 12
- token: break
  stream: "\n"
  span:
    start:
      index: 12
      line: 0
      column: 12
    end:
      index: 13
      line: 1
      column: 0
- token: directives_end
  stream: "---"
  span:
    start:
      index: 13
      line: 1
      column: 0
    end:
      index: 16
      line: 1
      column: 3
- value:
    explicit: true
    version: "1.2"
    tags: {}

