src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-16.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"\\u{feff}%TAG !yaml! tag:yaml.org,2002:\\n---\")"
---
- token: byte_order_mark
  stream: ﻿
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- token: directive
  stream: "%"
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 4
      line: 0
      column: 4
- token: directive_name
  stream: TAG
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 7
      line: 0
      column: 7
- token: separator
  stream: " "
  span:
    start:
      index: 7
      line: 0
      column: 7
    end:
      index: 8
      line: 0
      column: 8
- token: tag_handle
  stream: "!yaml!"
  span:
    start:
      index: 8
      line: 0
      column: 8
    end:
      index: 14
      line: 0
      column: 14
- token: separator
  stream: " "
  span:
    start:
      index: 14
      line: 0
      column: 14
    end:
      index: 15
      line: 0
      column: 15
- token: tag_prefix
  stream: "tag:yaml.org,2002:"
  span:
    start:
      index: 15
      line: 0
      column: 15
    end:
      index: 33
      line: 0
      column: 33
- token: break
  stream: "\n"
  span:
    start:
      index: 33
      line: 0
      column: 33
    end:
      index: 34
      line: 1
      column: 0
- token: directives_end
  stream: "---"
  span:
    start:
      index: 34
      line: 1
      column: 0
    end:
      index: 37
      line: 1
      column: 3
- value:
    version: ~
    tags:
      "!yaml!": "tag:yaml.org,2002:"

