src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-17.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"\\u{feff}\\t \\t# comment\\n #line\\n\")"
---
- token: byte_order_mark
  stream: ﻿
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- token: separator
  stream: "\t \t"
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 6
      line: 0
      column: 6
- token: comment
  stream: "# comment"
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 15
      line: 0
      column: 15
- token: break
  stream: "\n"
  span:
    start:
      index: 15
      line: 0
      column: 15
    end:
      index: 16
      line: 1
      column: 0
- token: separator
  stream: " "
  span:
    start:
      index: 16
      line: 1
      column: 0
    end:
      index: 17
      line: 1
      column: 1
- token: comment
  stream: "#line"
  span:
    start:
      index: 17
      line: 1
      column: 1
    end:
      index: 22
      line: 1
      column: 6
- token: break
  stream: "\n"
  span:
    start:
      index: 22
      line: 1
      column: 6
    end:
      index: 23
      line: 2
      column: 0
- value:
    version: ~
    tags: {}

