src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-19.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix,\n    \"\\u{feff}%YAML 1.2\\n# yaml\\n%TAG !yaml! tag:yaml.org,2002:\\r\\n\\t#tag\\n%FOO bar baz\\n---\")"
---
- token: byte_order_mark
  stream: ﻿
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- token: directive
  stream: "%"
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 4
      line: 0
      column: 4
- token: directive_name
  stream: YAML
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 8
      line: 0
      column: 8
- token: separator
  stream: " "
  span:
    start:
      index: 8
      line: 0
      column: 8
    end:
      index: 9
      line: 0
      column: 9
- token: yaml_version
  stream: "1.2"
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 12
      line: 0
      column: 12
- token: break
  stream: "\n"
  span:
    start:
      index: 12
      line: 0
      column: 12
    end:
      index: 13
      line: 1
      column: 0
- token: comment
  stream: "# yaml"
  span:
    start:
      index: 13
      line: 1
      column: 0
    end:
      index: 19
      line: 1
      column: 6
- token: break
  stream: "\n"
  span:
    start:
      index: 19
      line: 1
      column: 6
    end:
      index: 20
      line: 2
      column: 0
- token: directive
  stream: "%"
  span:
    start:
      index: 20
      line: 2
      column: 0
    end:
      index: 21
      line: 2
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 21
      line: 2
      column: 1
    end:
      index: 24
      line: 2
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 24
      line: 2
      column: 4
    end:
      index: 25
      line: 2
      column: 5
- token: tag_handle
  stream: "!yaml!"
  span:
    start:
      index: 25
      line: 2
      column: 5
    end:
      index: 31
      line: 2
      column: 11
- token: separator
  stream: " "
  span:
    start:
      index: 31
      line: 2
      column: 11
    end:
      index: 32
      line: 2
      column: 12
- token: tag_prefix
  stream: "tag:yaml.org,2002:"
  span:
    start:
      index: 32
      line: 2
      column: 12
    end:
      index: 50
      line: 2
      column: 30
- token: break
  stream: "\r\n"
  span:
    start:
      index: 50
      line: 2
      column: 30
    end:
      index: 52
      line: 3
      column: 0
- token: separator
  stream: "\t"
  span:
    start:
      index: 52
      line: 3
      column: 0
    end:
      index: 53
      line: 3
      column: 1
- token: comment
  stream: "#tag"
  span:
    start:
      index: 53
      line: 3
      column: 1
    end:
      index: 57
      line: 3
      column: 5
- token: break
  stream: "\n"
  span:
    start:
      index: 57
      line: 3
      column: 5
    end:
      index: 58
      line: 4
      column: 0
- token: directive
  stream: "%"
  span:
    start:
      index: 58
      line: 4
      column: 0
    end:
      index: 59
      line: 4
      column: 1
- token: directive_name
  stream: FOO
  span:
    start:
      index: 59
      line: 4
      column: 1
    end:
      index: 62
      line: 4
      column: 4
- severity: warning
  message: "unknown directive 'FOO'"
  span:
    start:
      index: 59
      line: 4
      column: 1
    end:
      index: 62
      line: 4
      column: 4
  stream: FOO
- token: separator
  stream: " "
  span:
    start:
      index: 62
      line: 4
      column: 4
    end:
      index: 63
      line: 4
      column: 5
- token: directive_parameter
  stream: bar
  span:
    start:
      index: 63
      line: 4
      column: 5
    end:
      index: 66
      line: 4
      column: 8
- token: separator
  stream: " "
  span:
    start:
      index: 66
      line: 4
      column: 8
    end:
      index: 67
      line: 4
      column: 9
- token: directive_parameter
  stream: baz
  span:
    start:
      index: 67
      line: 4
      column: 9
    end:
      index: 70
      line: 4
      column: 12
- token: break
  stream: "\n"
  span:
    start:
      index: 70
      line: 4
      column: 12
    end:
      index: 71
      line: 5
      column: 0
- token: directives_end
  stream: "---"
  span:
    start:
      index: 71
      line: 5
      column: 0
    end:
      index: 74
      line: 5
      column: 3
- value:
    explicit: true
    version: "1.2"
    tags:
      "!yaml!": "tag:yaml.org,2002:"

